# DataImport

./: README.md  main.py  pyproject.toml
DataImport/: DataImportPopup.py  __init__.py
data/: satisfaction.xlsx
dataimport/: DataImportPopup.py  __init__.py
