[tool.poetry]
name = "dataimport"
version = "0.1.0"
description = ""
authors = ["Jannik H. Orzek <jannik.orzek@mailbox.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ttkbootstrap = "^1.10.1"
pandas = "^2.2.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
